tests/transpiler/x/ocaml/join_multi.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let customers = [[("id", 1); ("name", "Alice")]; [("id", 2); ("name", "Bob")]] in
  let orders = [[("id", 100); ("customerId", 1)]; [("id", 101); ("customerId", 2)]] in
  let items = [[("orderId", 100); ("sku", "a")]; [("orderId", 101); ("sku", "b")]] in
  let result = (List.concat (List.map (fun o -> (List.concat (List.map (fun c -> (List.filter_map (fun i -> if (((List.assoc "customerId" o) == (List.assoc "id" c)) && ((List.assoc "id" o) == (List.assoc "orderId" i))) then Some ([("name", (List.assoc "name" c)); ("sku", (List.assoc "sku" i))]) else None) items)) customers))) orders)) in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") ["--- Multi Join ---"]));
  (try List.iter (fun r ->
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [(List.assoc "name" r); "bought item"; (List.assoc "sku" r)]));
    with Continue -> ()) result with Break -> ())
